CMAKE_MINIMUM_REQUIRED(VERSION 3.3)
INCLUDE("../config/nrf52.cmake")
PROJECT(bootloader C ASM)
enable_language(ASM)
enable_language(C)

ADD_DEFINITIONS( 
	-DBOARD_CUSTOM
	-DCONFIG_GPIO_AS_PINRESET
	-DBLE_STACK_SUPPORT_REQD
	-DFLOAT_ABI_HARD
	-DNRF52
	-DNRF52832_XXAA
	-DNRF52_PAN_74
	-DNRF_SD_BLE_API_VERSION=6
	-DS132
	-DSOFTDEVICE_PRESENT
	-DSWI_DISABLE0
	-DNRF_DFU_SETTINGS_VERSION=2
	-DNRF_DFU_SVCI_ENABLED
	-DSVC_INTERFACE_CALL_AS_NORMAL_FUNCTION
	-DuECC_ENABLE_VLI_API=0
	-DuECC_OPTIMIZATION_LEVEL=3
	-DuECC_SQUARE_FUNC=0
	-DuECC_SUPPORT_COMPRESSED_POINT=0
	-DuECC_VLI_NATIVE_LITTLE_ENDIAN=1
	-D__HEAP_SIZE=0
	)

INCLUDE("../config/SDK.cmake")

SET(SOURCE_FILES
	main.c
	../config/public_key.c
	)

SET(COMPILE_DEFINITIONS_DEBUG -O0 -g3 -DDEBUG)
SET(COMPILE_DEFINITIONS_RELEASE -Os)

INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_SOURCE_DIR}/.
	${SDK_INCLUDE_DIRS}
	${SDK_LIB_INCLUDE_DIRS}
	${SDK_BLE_INCLUDE_DIRS}
	${SDK_BOOT_INCLUDE_DIRS}
	${SDK_CRYPTO_INCLUDE_DIRS}
	./
	../config
	)

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME}.elf
	${NRF52_STARTUP}
	${SDK_MOD_DRV_SOURCES}
	${SOURCE_FILES}
	${SDK_LIB_SOURCES}
	${SDK_BLE_SOURCES}
	${SDK_BOOT_SOURCES}
	${NRF52_SYSTEM}
	${SDK_EXT_FPRINTF_SOURCES}
	${SDK_LOG_SOURCES}
	)

ADD_LIBRARY(oberon STATIC IMPORTED)
set_target_properties( oberon PROPERTIES IMPORTED_LOCATION ${SDK_DIR}/external/nrf_oberon/lib/cortex-m4/hard-float/liboberon_2.0.7.a )
ADD_LIBRARY(micro_ecc STATIC IMPORTED)
set_target_properties( micro_ecc PROPERTIES IMPORTED_LOCATION ${SDK_DIR}/external/micro-ecc/nrf52hf_armgcc/armgcc/micro_ecc_lib_nrf52.a )
TARGET_LINK_LIBRARIES(${CMAKE_PROJECT_NAME}.elf 
	m
	c
	nosys
	oberon
	micro_ecc
	)

SET(MBRHEX ${SDK_SD_DIR}../mbr/nrf52832/hex/mbr_nrf52_2.4.1_mbr.hex)
# Convert elf to hex & bin
ADD_CUSTOM_COMMAND(TARGET ${CMAKE_PROJECT_NAME}.elf 
	POST_BUILD COMMAND ${CMAKE_OBJCOPY} ARGS -R .rtt -Oihex ${CMAKE_PROJECT_NAME}.elf ${CMAKE_PROJECT_NAME}.out
	POST_BUILD COMMAND ${MERGEHEX} -m ${CMAKE_PROJECT_NAME}.out ${MBRHEX} -o ${CMAKE_PROJECT_NAME}.hex
	)
ADD_CUSTOM_COMMAND(TARGET ${CMAKE_PROJECT_NAME}.elf
	POST_BUILD COMMAND ${CMAKE_OBJCOPY} ARGS -R .rtt -Obinary ${CMAKE_PROJECT_NAME}.elf ${CMAKE_PROJECT_NAME}.bin
	)

# Derict FW flashing
ADD_CUSTOM_TARGET(flashsd
	COMMAND ${NRFJPROG} -f ${TARGET_PLATFORM} --eraseall
    COMMAND ${NRFJPROG} -f ${TARGET_PLATFORM} --program ${SOFTDEVICE_PATH}
    COMMENT "Flashing softdevice"
    )

ADD_CUSTOM_TARGET(flash
	DEPENDS ${CMAKE_PROJECT_NAME}.elf
    COMMAND ${NRFJPROG} -f ${TARGET_PLATFORM} --program ${CMAKE_PROJECT_NAME}.hex --sectorerase
    COMMAND ${NRFJPROG} -f ${TARGET_PLATFORM} -r
    COMMENT "Flashing program"
    )